--- a/jpconj/Ui/conjframe.ui
+++ b/jpconj/Ui/conjframe.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>conjFrame</class>
- <widget class="QFrame" name="conjFrame">
+ <class>ConjFrame</class>
+ <widget class="QFrame" name="ConjFrame">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -28,7 +28,16 @@
      <property name="sizeConstraint">
       <enum>QLayout::SetFixedSize</enum>
      </property>
-     <property name="margin">
+     <property name="leftMargin">
+      <number>1</number>
+     </property>
+     <property name="topMargin">
+      <number>1</number>
+     </property>
+     <property name="rightMargin">
+      <number>1</number>
+     </property>
+     <property name="bottomMargin">
       <number>1</number>
      </property>
      <item>
@@ -114,7 +123,7 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
-        <widget class="QWebView" name="standardConj">
+        <widget class="QWebView" name="standardConj" native="true">
          <property name="accessibleName">
           <string notr="true"/>
          </property>
@@ -134,11 +143,11 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="0">
-        <widget class="QWebView" name="basicConj">
+        <widget class="QWebView" name="basicConj" native="true">
          <property name="accessibleName">
           <string notr="true"/>
          </property>
-         <property name="url">
+         <property name="url" stdset="0">
           <url>
            <string>about:blank</string>
           </url>
@@ -168,11 +177,11 @@
         <enum>QLayout::SetMaximumSize</enum>
        </property>
        <item row="0" column="0">
-        <widget class="QWebView" name="complexConj">
+        <widget class="QWebView" name="complexConj" native="true">
          <property name="accessibleName">
           <string notr="true"/>
          </property>
-         <property name="url">
+         <property name="url" stdset="0">
           <url>
            <string>about:blank</string>
           </url>
