--- a/jpconj/Ui/about.ui
+++ b/jpconj/Ui/about.ui
@@ -85,7 +85,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="licenset">
     <attribute name="title">
@@ -158,11 +158,11 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="thankt">
+   <widget class="QWidget" name="legalt">
     <attribute name="title">
-     <string>Thanks</string>
+     <string>Legal information</string>
     </attribute>
-    <widget class="QTextBrowser" name="thanksText">
+    <widget class="QTextBrowser" name="legalText">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -186,6 +186,9 @@ p, li { white-space: pre-wrap; }
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'DejaVu Sans';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::TextBrowserInteraction</set>
      </property>
      <property name="openLinks">
       <bool>false</bool>
