--- a/jpconj/Ui/jpconjmain.ui
+++ b/jpconj/Ui/jpconjmain.ui
@@ -73,7 +73,7 @@
      <x>0</x>
      <y>0</y>
      <width>634</width>
-     <height>20</height>
+     <height>30</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -103,7 +103,7 @@
     </property>
     <widget class="QMenu" name="menuZoom">
      <property name="title">
-      <string>Zoom</string>
+      <string>&amp;Zoom</string>
      </property>
      <property name="icon">
       <iconset>
@@ -113,8 +113,22 @@
      <addaction name="actionZoomOut"/>
      <addaction name="actionNormalSize"/>
     </widget>
+    <widget class="QMenu" name="menu_Toolbars">
+     <property name="title">
+      <string>&amp;Toolbars</string>
+     </property>
+    </widget>
+    <widget class="QMenu" name="menuOperations">
+     <property name="title">
+      <string>Operations</string>
+     </property>
+     <addaction name="showConjugate"/>
+     <addaction name="showUnconjugate"/>
+    </widget>
     <addaction name="menuZoom"/>
+    <addaction name="menu_Toolbars"/>
     <addaction name="separator"/>
+    <addaction name="menuOperations"/>
    </widget>
    <widget class="QMenu" name="menu_Edit">
     <property name="title">
@@ -181,7 +195,7 @@
    <property name="minimumSize">
     <size>
      <width>436</width>
-     <height>72</height>
+     <height>84</height>
     </size>
    </property>
    <property name="contextMenuPolicy">
@@ -194,7 +208,7 @@
     <set>Qt::BottomDockWidgetArea</set>
    </property>
    <property name="windowTitle">
-    <string>Examples</string>
+    <string>E&amp;xamples</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
@@ -220,7 +234,7 @@
       <number>1</number>
      </property>
      <item>
-      <widget class="QWebView" name="expView" native="true">
+      <widget class="QWebView" name="expView">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
          <horstretch>0</horstretch>
@@ -281,7 +295,7 @@
   </action>
   <action name="actionHelpContent">
    <property name="text">
-    <string>Help Content</string>
+    <string>&amp;Help Content</string>
    </property>
   </action>
   <action name="actionExportResult">
@@ -289,7 +303,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Content Export</string>
+    <string>Content &amp;Export</string>
    </property>
   </action>
   <action name="actionPrint">
@@ -302,32 +316,56 @@
   </action>
   <action name="actionZoomIn">
    <property name="text">
-    <string>Zoom In</string>
+    <string>&amp;Zoom In</string>
    </property>
   </action>
   <action name="actionZoomOut">
    <property name="text">
-    <string>Zoom Out</string>
+    <string>Zoom &amp;Out</string>
    </property>
   </action>
   <action name="actionNormalSize">
    <property name="text">
-    <string>Normal Size</string>
+    <string>&amp;Normal Size</string>
    </property>
   </action>
   <action name="actionHide">
    <property name="text">
-    <string>Hide</string>
+    <string>&amp;Hide</string>
    </property>
   </action>
   <action name="actionContactUs">
    <property name="text">
-    <string>Contact us</string>
+    <string>&amp;Contact us</string>
    </property>
   </action>
   <action name="actionHomePage">
    <property name="text">
-    <string>Homepage</string>
+    <string>H&amp;omepage</string>
+   </property>
+  </action>
+  <action name="actionK">
+   <property name="text">
+    <string>k</string>
+   </property>
+  </action>
+  <action name="showConjugate">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Conjugate</string>
+   </property>
+  </action>
+  <action name="showUnconjugate">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Unconjugate</string>
    </property>
   </action>
  </widget>
@@ -336,7 +374,7 @@
   <customwidget>
    <class>QWebView</class>
    <extends>QWidget</extends>
-   <header>qwebview.h</header>
+   <header>QtWebKitWidgets/QWebView</header>
   </customwidget>
  </customwidgets>
  <resources>
